--- a/UI/styles.css
+++ b/UI/styles.css
@@ -56,8 +56,9 @@ header
     background-color: #FFF;
     border: none;
 }
-.exit-button:hover, .edit-delete-button:hover, .tweet-comment-button:hover,
-.show-more-button:hover, .logo:hover, .reset-button:hover, .filter-button:hover
+.exit-button:hover, .edit-delete-button:hover, .tweet-comment-button:hover, .show-more-button:hover,
+.logo:hover, .reset-button:hover, .filter-button:hover, .log-in-button:hover, .sign-up-button:hover,
+.log-in-button-aut:hover, .sign-up-button-reg:hover
 {
     cursor: pointer;
     opacity: 0.8;
@@ -68,6 +69,9 @@ header
     height: 3.5rem;
     width: 3.5rem;
     color: var(--dark-p);
+}
+#main{
+    height: 78%;
 }
 #mainPage
 {
@@ -114,7 +118,7 @@ header
     resize: none;
     width: 100%;
 }
-.tweet-comment-button, .show-more-button, .sign-up-button
+.tweet-comment-button, .show-more-button, .sign-up-button, .sign-up-button-reg
 {
     background-color: var(--dark-p);
     border: none;
@@ -123,14 +127,13 @@ header
     font-size: 1.3rem;
     padding: 0.2rem 0.4rem;
 }
-.log-in-button
+.log-in-button, .log-in-button-aut
 {
     background-color: var(--light-p);
     border: none;
     border-radius: 0.3rem;
     color: #FFF;
     font-size: 1.3rem;
-    margin-left: 1rem;
     padding: 0.2rem 0.4rem;
 }
 #plus, #arrow
@@ -323,4 +326,39 @@ footer
     margin-top: 1rem;
     justify-content: center;
     width: 100%;
+}
+#registrationPage, #authorizationPage
+{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    padding: 7rem 0rem;
+    width: 100%;
+}
+#window
+{
+    align-items: center;
+    background-color: #FFF;
+    border-radius: var(--default-br);
+    box-shadow: 0 0 0.35rem var(--light-p);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 1rem 3rem;
+    width: 30%;
+}
+.input-field
+{
+    border: none;
+    border-radius: 0.2rem;
+    box-shadow: 0 0 0.35rem var(--light-p);
+    font-size: 1rem;
+    margin-bottom: 1.2rem;
+    outline: none;
+    padding: 0.3rem 0.2rem;
+    width: 100%;
+}
+#reset-filter-button{
+    background-color: rgba(255, 91, 91, 0.687);
+    margin-bottom: 1rem;
 }
